Resize controls not showing on Media Card block : https://github.com/thatplugincompany/coblocks/issues/46

--- a/src/blocks/media-card/styles/editor.scss
+++ b/src/blocks/media-card/styles/editor.scss
@@ -70,9 +70,16 @@
 		display: none;
 	}
 
-	&.is-selected:not(.is-stacked-on-mobile) {
+	&.is-selected{
 		.editor-media-container__resizer .components-resizable-box__handle {
 			display: block;
+		}
+		@media (max-width: 600px) {
+			&.is-stacked-on-mobile {
+				.editor-media-container__resizer .components-resizable-box__handle {
+					display: none;
+				}
+			}
 		}
 	}
 
